--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8088
+spring.application.name = reservationService
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservations
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
